syntax = "proto3";

package orbis.secret.v1alpha1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service SecretService {
  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse) {}

  rpc StoreSecret(StoreSecretRequest) returns (StoreSecretResponse) {}

  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}

  rpc DeleteSecret(DeleteSecretRequest) returns (google.protobuf.Empty) {}
}

message ListSecretsRequest {
  string key = 1;
  string value = 2;
}

message ListSecretsResponse {
  repeated Secret secrets = 1;
}

message StoreSecretRequest {
  string key = 1;
  string value = 2;
}

message StoreSecretResponse {}

message GetSecretRequest {
  string key = 1;
}

message GetSecretResponse {
  string key = 1;
  string value = 2;
}

message DeleteSecretRequest {
  string key = 1;
}

// Stored secret
message Secret {
  string id = 1;
  bytes u = 2; // encryption commitment
  bytes nizk = 3; // proof of encryption
  string ring_id = 4; // ring
}

// Share of a reencrypted secret
message SecretShare {}
